⏰ minor update - add countdown

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <li><a href="https://www.instagram.com/chayapatr">instagram</a></li>
             <li><a href="https://github.com/chayapatr">github</a></li>
             <li><a href="mailto:chayapatr.arc@gmail.com">mail</a></li>
+            <li><a href="https://twitter.com/rtapayahc" id="twitter" class=invisible>twitter</a></li>
             <li id="hidden" class="invisible">status : single</li>
+            <li id="countdown" ></li>
         </ul>
     </main>
     <footer id="footer">chayapatr.com</footer>
