change to typescript

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="https://medium.com/@chayapatr">medium</a></li>
             <li><a href="https://www.instagram.com/chayapatr">instagram</a></li>
             <li><a href="https://github.com/chayapatr">github</a></li>
-            <li><a href="mailto:chayapatr.arc@gmail.com">mail</a></li>
+            <li><a href="mailto:mail@chayapatr.com">mail</a></li>
             <li><a href="https://twitter.com/rtapayahc" id="twitter" class=invisible>twitter</a></li>
             <li id="hidden" class="invisible">status : single</li>
             <li id="countdown" ></li>
