--- a/index.html
+++ b/index.html
@@ -4,35 +4,136 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="theme-color" content="#353535">
-    <meta name="description" content="computer + social science + japanese pop culture + movie #JusticeForMahohon">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono" rel="stylesheet">
-    <link rel="dns-prefetch" href="https://twitter.com/m_maryys">
-    <link rel="dns-prefetch" href="https://twitter.com/rtapayahc">
-    <link rel="dns-prefetch" href="https://www.instagram.com/chayapatr">
-    <link rel="dns-prefetch" href="https://medium.com/@chayapatr">
-    <link rel="dns-prefetch" href="https://github.com/chayapatr">
-    <title>chayapatr archiwaranguprok</title>
-    <link rel="shortcut icon" type="image/png" href="./favicon.png" />
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    <div id="text"></div>
-    <div id="under"></div>
-    <main>
-        <ul>
-            <li><a href="https://medium.com/@chayapatr">medium</a></li>
-            <li><a href="https://www.instagram.com/chayapatr">instagram</a></li>
-            <li><a href="https://github.com/chayapatr">github</a></li>
-            <li><a href="mailto:mail@chayapatr.com">mail</a></li>
-            <li><a href="https://twitter.com/rtapayahc" id="twitter" class=invisible>twitter</a></li>
-            <li id="hidden" class="invisible">status : single</li>
-            <li id="countdown" ></li>
-        </ul>
-    </main>
-    <footer id="footer">chayapatr.com</footer>
+    <nav id="nav">
+        <a id="name" href="#">CHAYAPATR ARCHIWAWANGUPROK</a>
+    </nav>
+    <div id="link">
+        <a href="#works">Works</a>
+        <a href="#blog">Blog</a>
+        <a href="#contact">Contact</a>
+    </div>
+    <header id="hero"></header>
+    <section id="introduction">
+        <h2>Hi, my name is Chayapatr</h2>
+        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet lectus ut sapien imperdiet
+            faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus. Nam bibendum eget
+            velit vitae suscipit. Fusce quis faucibus sapien. Nulla id diam libero. Aenean interdum mi eget purus
+            bibendum scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+            curae; Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed
+            placerat enim purus, ac sodales quam viverra sit amet. Ut fermentum urna nisl, et dignissim ligula venenatis
+            porta. Quisque ac justo at nisi sollicitudin vestibulum.</div>
+        <div>Praesent condimentum magna purus, eget maximus est pretium a. Mauris id porttitor quam, vel porttitor urna.
+            Cras sodales elementum nunc at consequat. Aliquam ut malesuada orci. Suspendisse maximus vel metus in
+            tempor. Integer eleifend consequat consequat. Nam non metus sed nisi mattis scelerisque. Nullam vitae
+            euismod metus, ac varius tellus. Duis in feugiat orci, eget luctus ligula. Morbi et sodales augue. Curabitur
+            ac placerat orci. Etiam eget aliquam nibh. Duis in tristique ipsum, non euismod risus. Nullam et porttitor
+            libero. Donec rhoncus sit amet risus at feugiat.</div>
+    </section>
+    <section id="works">
+        <h2>Projects + Stuffs</h2>
+        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet lectus ut sapien imperdiet
+            faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus. Nam bibendum eget
+            velit vitae suscipit. Fusce quis faucibus sapien. Nulla id diam libero. Aenean interdum mi eget purus
+            bibendum scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+            curae; Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed
+            placerat enim purus, ac sodales quam viverra sit amet. Ut fermentum urna nisl, et dignissim ligula venenatis
+            porta. Quisque ac justo at nisi sollicitudin vestibulum.</div>
+        <div class=gallary>
+            <div class="gallary-highlight">
+                <div class="img">
+                    <img src="./assets/messe.jpg" alt="">
+                </div>
+            </div>
+
+            <div class="gallary-row-3">
+                <div class="img">
+                    <img src="./assets/kornor.png" alt="">
+                </div>
+                <div class="img"><img src="./assets/pdscc.jpg" alt=""></div>
+                <div class="img"><img src="./assets/cave.jpg" alt=""></div>
+            </div>
+            <div class="gallary-row-2">
+                <div class="img"><img src="./assets/toi.jpg" alt=""></div>
+                <div class="img"><img src="./assets/forgotten.jpg" alt=""></div>
+            </div>
+            <div class="gallary-row-2-right">
+                <div class="img"><img src="./assets/dna.jpeg" alt=""></div>
+                <div class="img"><img src="./assets/hacktoberfest.png" alt=""></div>
+            </div>
+            <div class="gallary-row-3">
+                <div class="img">
+                    <img src="./assets/saturdayschool.jpg" alt="">
+                </div>
+                <div class="img"><img src="./assets/yaowarat.jpg" alt=""></div>
+                <div class="img"><img src="./assets/bkkjs.png" alt=""></div>
+            </div>
+        </div>
+    </section>
+    <section id="blog">
+        <h2>Blog</h2>
+        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet lectus ut sapien imperdiet
+            faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus. Nam bibendum eget
+            velit vitae suscipit. Fusce quis faucibus sapien. Nulla id diam libero. Aenean interdum mi eget purus
+            bibendum scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+            curae; Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed
+            placerat enim purus, ac sodales quam viverra sit amet. Ut fermentum urna nisl, et dignissim ligula venenatis
+            porta. Quisque ac justo at nisi sollicitudin vestibulum.</div>
+        <div>Praesent condimentum magna purus, eget maximus est pretium a. Mauris id porttitor quam, vel porttitor urna.
+            Cras sodales elementum nunc at consequat. Aliquam ut malesuada orci. Suspendisse maximus vel metus in
+            tempor. Integer eleifend consequat consequat. Nam non metus sed nisi mattis scelerisque. Nullam vitae
+            euismod metus, ac varius tellus. Duis in feugiat orci, eget luctus ligula. Morbi et sodales augue. Curabitur
+            ac placerat orci. Etiam eget aliquam nibh. Duis in tristique ipsum, non euismod risus. Nullam et porttitor
+            libero. Donec rhoncus sit amet risus at feugiat.</div>
+    </section>
+    <section id="info">
+        <div class="wrapper">
+            <h2>Interviews + Talks</h2>
+        </div>
+        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet lectus ut sapien imperdiet
+            faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus. Nam bibendum eget
+            velit vitae suscipit. Fusce quis faucibus sapien. Nulla id diam libero. Aenean interdum mi eget purus
+            bibendum scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
+            curae; Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed
+            placerat enim purus, ac sodales quam viverra sit amet. Ut fermentum urna nisl, et dignissim ligula venenatis
+            porta. Quisque ac justo at nisi sollicitudin vestibulum.
+        </div>
+        <div class=gallary>
+            <div class="gallary-row-3">
+                <div class="img">
+                    <img src="./assets/saturdayschool.jpg" alt="">
+                </div>
+                <div class="img"><img src="./assets/yaowarat.jpg" alt=""></div>
+                <div class="img"><img src="./assets/bkkjs.png" alt=""></div>
+            </div>
+        </div>
+    </section>
+    <section id="contact">
+        <div class="wrapper">
+            <h2>Contact</h2>
+        </div>
+        <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet lectus ut sapien
+            imperdiet faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus.
+            Nam bibendum eget velit vitae suscipit. Fusce quis faucibus sapien. Nulla id diam libero. Aenean
+            interdum mi eget purus bibendum scelerisque. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices posuere cubilia curae; Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+            per inceptos himenaeos. Sed placerat enim purus, ac sodales quam viverra sit amet. Ut fermentum urna
+            nisl, et dignissim ligula venenatis porta. Quisque ac justo at nisi sollicitudin vestibulum.</div>
+        <div>Praesent condimentum magna purus, eget maximus est pretium a. Mauris id porttitor quam, vel
+            porttitor urna. Cras sodales elementum nunc at consequat. Aliquam ut malesuada orci. Suspendisse
+            maximus vel metus in tempor. Integer eleifend consequat consequat. Nam non metus sed nisi mattis
+            scelerisque. Nullam vitae euismod metus, ac varius tellus. Duis in feugiat orci, eget luctus ligula.
+            Morbi et sodales augue. Curabitur ac placerat orci. Etiam eget aliquam nibh. Duis in tristique
+            ipsum, non euismod risus. Nullam et porttitor libero. Donec rhoncus sit amet risus at feugiat.</div>
+    </section>
+    <footer>
+        ©2020 Chayapatr Archiwaranguprok - @chayapatr
+    </footer>
 </body>
-<script src="https://unpkg.com/typewriter-effect/dist/core.js"></script>
-<script src="script.js"></script>
+
 </html>
