--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <a href="#blog">Blog</a>
         <a href="#contact">Contact</a>
     </div>
-    <header id="hero"></header>
+    <header id="hero">
+        <div id="quote">WE CHOOSE TO GO TO THE MOON</div>
+    </header>
     <section id="introduction">
         <h2>Hi, my name is Chayapatr</h2>
         <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet lectus ut sapien imperdiet
@@ -36,7 +38,7 @@
             libero. Donec rhoncus sit amet risus at feugiat.</div>
     </section>
     <section id="works">
-        <h2>Projects + Stuffs</h2>
+        <h2>Projects+Stuffs</h2>
         <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer sit amet lectus ut sapien imperdiet
             faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus. Nam bibendum eget
             velit vitae suscipit. Fusce quis faucibus sapien. Nulla id diam libero. Aenean interdum mi eget purus
@@ -47,31 +49,74 @@
         <div class=gallary>
             <div class="gallary-highlight">
                 <div class="img">
-                    <img src="./assets/messe.jpg" alt="">
+                    <a href="https://spaceth.co/messe">
+                        <img src="./assets/messe.jpg" alt="">
+                        <div class="text-img">Molecular Encoded Storage for Space Exploration</div>
+                        <div class="text-img-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                            Integer sit amet lectus ut sapien imperdiet
+                            faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus. Nam
+                            bibendum eget velit vitae suscipit.</div>
+                    </a>
                 </div>
             </div>
 
             <div class="gallary-row-3">
                 <div class="img">
                     <img src="./assets/kornor.png" alt="">
+                    <div class="text-img">PDS Student Committee</div>
+                    <div class="text-img-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Integer sit amet lectus ut sapien imperdiet
+                        faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus. Nam
+                        bibendum eget velit vitae suscipit.</div>
                 </div>
-                <div class="img"><img src="./assets/pdscc.jpg" alt=""></div>
+                <div class="img">
+                    <img src="./assets/pdscc.jpg" alt="">
+                    <div class="text-img">PDS Computer Club</div>
+                    <div class="text-img-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Integer sit amet lectus ut sapien imperdiet
+                        faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus. Nam
+                        bibendum eget velit vitae suscipit.</div>
+                </div>
                 <div class="img"><img src="./assets/cave.jpg" alt=""></div>
             </div>
             <div class="gallary-row-2">
-                <div class="img"><img src="./assets/toi.jpg" alt=""></div>
-                <div class="img"><img src="./assets/forgotten.jpg" alt=""></div>
+                <div class="img">
+                    <img src="./assets/toi.jpg" alt="">
+                    <div class="text-img">Thailand Olympiad in Informatics</div>
+                    <div class="text-img-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Integer sit amet lectus ut sapien imperdiet
+                        faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus. Nam
+                        bibendum eget velit vitae suscipit.</div>
+                </div>
+                <div class="img">
+                    <img src="./assets/forgotten.jpg" alt="">
+                    <div class="text-img">Forgotten</div>
+                </div>
             </div>
             <div class="gallary-row-2-right">
                 <div class="img"><img src="./assets/dna.jpeg" alt=""></div>
-                <div class="img"><img src="./assets/hacktoberfest.png" alt=""></div>
+                <div class="img">
+                    <img src="./assets/hacktoberfest.png" alt="">
+                </div>
             </div>
             <div class="gallary-row-3">
                 <div class="img">
                     <img src="./assets/saturdayschool.jpg" alt="">
+                    <div class="text-img">Saturday School</div>
+                    <div class="text-img-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Integer sit amet lectus ut sapien imperdiet
+                        faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus. Nam
+                        bibendum eget velit vitae suscipit.</div>
                 </div>
                 <div class="img"><img src="./assets/yaowarat.jpg" alt=""></div>
-                <div class="img"><img src="./assets/bkkjs.png" alt=""></div>
+                <div class="img">
+                    <img src="./assets/bkkjs.png" alt="">
+                    <div class="text-img">BKK.JS</div>
+                    <div class="text-img-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                        Integer sit amet lectus ut sapien imperdiet
+                        faucibus ut ut odio. Suspendisse feugiat ex in magna interdum, a malesuada odio rhoncus. Nam
+                        bibendum eget velit vitae suscipit.</div>
+                </div>
             </div>
         </div>
     </section>
@@ -135,5 +180,6 @@
         ©2020 Chayapatr Archiwaranguprok - @chayapatr
     </footer>
 </body>
+<script src="script.js"></script>
 
 </html>
