--- a/src/app.html
+++ b/src/app.html
@@ -11,19 +11,19 @@
 			margin: 0;
 			border: 0;
 			padding: 0;
-			font-family: "Inter", sans-serif;
-			font-weight: 500;
+			font-family: 'Inter', sans-serif;
+			font-weight: 400;
 		}
 		h1 {
-        	font-size: 80px;
-        	line-height: 80px;
-        	letter-spacing: -3px;
-    	}
-    	h2 {
-        	font-size: 40px;
-    		line-height: 40px;
-        	letter-spacing: -1.5px;
-    	}
+			font-size: 80px;
+			line-height: 80px;
+			letter-spacing: -3px;
+		}
+		h2 {
+			font-size: 40px;
+			line-height: 40px;
+			letter-spacing: -1.5px;
+		}
 		@media screen and (max-width: 768px) {
 			h1 {
 				font-size: 50px;
