--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,12 @@
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com"> 
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@500&family=Inter:wght@500&display=swap" rel="stylesheet">
 		%svelte.head%
 	</head>
 	<style>
@@ -11,7 +17,7 @@
 			margin: 0;
 			border: 0;
 			padding: 0;
-			font-family: 'Inter', sans-serif;
+			font-family: 'Inter', 'IBM Plex Sans Thai', sans-serif;
 			font-weight: 500;
 		}
 		h1 {
@@ -29,6 +35,9 @@
 				font-size: 50px;
 				line-height: 50px;
 				letter-spacing: -2px;
+			}
+			.wrapper {
+				padding: 0 15px;
 			}
 		}
 	</style>
