--- a/src/app.html
+++ b/src/app.html
@@ -24,20 +24,25 @@
 			font-size: 80px;
 			line-height: 80px;
 			letter-spacing: -3px;
+			margin: 20px 0;
 		}
 		h2 {
 			font-size: 40px;
 			line-height: 40px;
 			letter-spacing: -1.5px;
 		}
+		.wrapper {
+			padding: 0 15px;
+		}
 		@media screen and (max-width: 768px) {
 			h1 {
 				font-size: 50px;
 				line-height: 50px;
 				letter-spacing: -2px;
+				margin: 10px 0;
 			}
 			.wrapper {
-				padding: 0 15px;
+				padding: 15px;
 			}
 		}
 	</style>
