--- a/src/app.html
+++ b/src/app.html
@@ -2,51 +2,14 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="/favicon.png" />
+		<link rel="icon" href="%svelte.assets%/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="preconnect" href="https://fonts.googleapis.com"> 
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@500&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com"> 
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai:wght@500&family=Inter:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+Thai&display=swap" rel="stylesheet">
 		%svelte.head%
 	</head>
-	<style>
-		* {
-			margin: 0;
-			border: 0;
-			padding: 0;
-			font-family: 'Inter', 'IBM Plex Sans Thai', sans-serif;
-			font-weight: 500;
-		}
-		h1 {
-			font-size: 80px;
-			line-height: 80px;
-			letter-spacing: -3px;
-			margin: 20px 0;
-		}
-		h2 {
-			font-size: 40px;
-			line-height: 40px;
-			letter-spacing: -1.5px;
-		}
-		.wrapper {
-			padding: 0 15px;
-		}
-		@media screen and (max-width: 768px) {
-			h1 {
-				font-size: 50px;
-				line-height: 50px;
-				letter-spacing: -2px;
-				margin: 10px 0;
-			}
-			.wrapper {
-				padding: 15px;
-			}
-		}
-	</style>
 	<body>
-		<div id="svelte">%svelte.body%</div>
+		<div>%svelte.body%</div>
 	</body>
 </html>
